--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -175,13 +175,13 @@
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung.html">Deine Bewerbung</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Erfahrungsberichte</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li>
                 </ul>
               </li>
-              <li class="dropdown-item"> <a href="#">Projektbesuch</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Für Sie daheim</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim.html">Für Sie daheim</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="#">"Consumer Missions"</a></li>
                   <li class="dropdown-divider"></li>
