adding zitate und literaturtipps

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -185,17 +185,17 @@
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Kaffee - unsere tägliche Chance</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Bäume für Kenia statt Blumen für Euro</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li>
                 </ul>
               </li>
 
               <li class="dropdown-item"> <a href="#">Presse und Downloads</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#">Literaturtipps</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#">Zitat</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li>
 
             </li>
           </ul>
