--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutSpende.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutSpende.html
@@ -5,30 +5,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <link href="https://www.aufbau-Website.de/craft/templates/_layouts/stylevorgaben_spende.css" rel="stylesheet" />
+  <link href="https://aufbau-Website.de/craft/web/CSSundJS/stylevorgaben_spende.css" rel="stylesheet" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <script src="https://aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script>
 
 
 
 </head>
 
-{% block headerbildPosition1 %} {% endblock %}
 
 
 <body>
 
 
+  {% block headerbildPosition1 %} {% endblock %}
 
 
 {% block headerbildPosition2 %} {% endblock %}
 
-
-
   {% include "_layouts/navbar_spende" %}
-
 
 
     {% block block1 %} {% endblock %}
