--- a/templates/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -36,10 +36,10 @@
           {% if entry.title != 'Werden Sie Teil von Chance e.V.' %}
 
         <div class="col-sm-4">
-          <div class="row">
+          <div class="row" style="height: 100%">
             <div class="col-1"> </div>
 
-              <div class="col-10" style="background-color: #ffffff;">
+              <div class="col-10" style="background-color: #ffffff; padding-top: 15px;">
               <h3>{{ entry.title }}</h3>
               <div id="copy"> {{ entry.anleser }} </div>
             </div>
