--- a/templates/craft_sicherungWebsite/templates/fuerSie/zitate.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/zitate.html
@@ -24,8 +24,8 @@
       {% set entries = entry.children().all() %}
 
     {% for entry in entries %}
-     <div id="copy"> {{ entry.title }} </div>
-     <h3> {{ entry.anleser }} </h3>
+     <div id="zitat"> {{ entry.title }} </div>
+     <div id="autor"> {{ entry.anleser }} </div>
      {% endfor %}
 
     </div>
