--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
@@ -16,42 +16,42 @@
   <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
     <!-- Chance Logo -->
 
-    <a class="navbar-brand"  href="https://www.aufbau-Website.de/craft/web/">
+    <a class="navbar-brand"  href="https://aufbau-website.de/craft/web/">
       <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
     </a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon" style="color:black;"></span>
+      <span class="navbar-toggler-icon" style="color:white;"></span>
     </button>
 
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="https://www.aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
+          <a class="nav-link" href="https://aufbau-Website.de/craft/web/" style="color:white; font-weight: bold;"> HOME </a>
         </li>
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled"
-            href="https://www.aufbau-Website.de/craft/web/uber-uns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+            href="https://aufbau-Website.de/craft/web/ueberUns" style="color:white; font-weight: bold;"> ÜBER UNS </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="#"> Arbeitsweise</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Konzept</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/konzept.html"> Konzept</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Leitbild</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/leitbild.html"> Leitbild</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Motivation</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/motivation.html"> Motivation</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Der Verein</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/verein.html"> Der Verein</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Transparenz</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/transparenz.html"> Transparenz</a> </li>
               <li class="dropdown-divider"></li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Empfehlungen</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/ueberUns/empfehlungen.html">Empfehlungen</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="#">1. Empfehlung</a></li>
                   <li class="dropdown-divider"></li>
@@ -67,27 +67,28 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="https://www.aufbau-Website.de/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" style="color:white; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Programme</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme.html">Programme</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Dorfentwicklung</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Kinderpaten</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Umwelt- und Naturschutz</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li>
                 </ul>
               </li>
-              <li class="dropdown-item"> <a href="#"> Themen</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte/medalid.html">1. Bericht</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="#">2. Bericht</a></li>
                   <li class="dropdown-divider"></li>
@@ -96,7 +97,7 @@
               </li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Projektberichte</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
                   <li class="dropdown-divider"></li>
@@ -113,7 +114,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="https://www.aufbau-Website.de/craft/web/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" style="color:white; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
@@ -159,54 +160,58 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="https://www.aufbau-Website.de/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" style="color:white; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
               <li class="dropdown-divider"></li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Freiwilligendienst</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Mit "weltwärts" nach Peru oder Kenia</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Weitere Einsatzmöglichkeiten in Peru</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Deine Bewerbung</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung.html">Deine Bewerbung</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Erfahrungsberichte</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li>
                 </ul>
               </li>
-              <li class="dropdown-item"> <a href="#">Projektbesuch</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Für Sie daheim</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim.html">Für Sie daheim</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">"Consumer Missions"</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Kaffee - unsere tägliche Chance</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Bäume für Kenia statt Blumen für Euro</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li>
                 </ul>
               </li>
 
               <li class="dropdown-item"> <a href="#">Presse und Downloads</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#">Literaturtipps</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#">Zitat</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li>
 
             </li>
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.aufbau-Website.de/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" href="https://aufbau-Website.de/craft/web/blog" style="color:white; font-weight: bold;"> BLOG </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.aufbau-Website.de/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
+          <a class="nav-link" href="https://aufbau-Website.de/craft/web/kontakt" style="color:white; font-weight: bold;"> KONTAKT </a>
         </li>
 
       </ul>
     </div>
   </div>
 </nav>
+
+<div class="container-fluid no-padding" style="position:fixed; top:0; z-index: 900; padding-top: 0px;">
+  <div class="rectangle" id="rechteck"></div>
+</div>
