--- a/templates/craft_sicherungWebsite/templates/fuerSie/daheim.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/daheim.html
@@ -35,7 +35,7 @@
       <div class="col-sm-4">
         <div class="row" style="height: 100%;">
           <div class="col-1"> </div>
-            <div class="col-10" style="background-color: #ffffff;">
+            <div class="col-10" style="background-color: #ffffff;  padding-top: 15px;">
             <h3>{{ entry.title }}</h3>
             <div id="copy"> {{ entry.anleser }} </div>
           </div>
