--- a/templates/craft_sicherungWebsite/templates/spenden/index.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/index.html
@@ -1,10 +1,14 @@
 
-{% extends "_layouts/layoutHome.html" %}
+{% extends "_layouts/layoutSpende.html" %}
 
 
 {% block headerbildPosition1 %}
 
-<div class="container-fluid no-padding" style="padding-top: 70px;">
+<div class="container-fluid no-padding" style="padding-top: 70px; background-color: #ee6e2d;">
+
+</div>
+
+<div class="container-fluid no-padding" style="padding-top: 0px;">
   <img class="img-fluid" src=" {{ craft.assets.filename('chance-spenden-header.jpg').one().getUrl() }} ">
 </div>
 
@@ -22,17 +26,28 @@
   <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 
-  <div class="container Achter-Spaltenlayout">
-    <div id="text1" style="padding-bottom:80px; ">
-      <h1 style="padding-bottom: 30px;"> Mit Ihrer Spende geben Sie Chancen – direkt, einfach und effektiv.   </h1>
-      <p id="anleser"> Verändern Sie das Leben einzelner Kinder und Familien sowie ganzer Dorfgemeinschaften, bekämpfen Sie Armut und bewahren Sie die Schöpfung.
-        Unterstützen Sie Chance e.V. mit einer Spende und werden Sie als Chancen-
-        Geber Teil unseres internationalen Teams für positive Veränderung und nachhaltige Entwicklung.
-
-      </p>
-      </div>
+  <div class="container achterspaltenlayout">
+    {% set entry = craft.entries.section('spenden').slug('spende').one() %}
+      <h1 style="padding-bottom: 30px;"> {{ entry.title }} </h1>
+      <div id="anleser"> {{ entry.anleser }}  </div>
     </div>
   </div>
+
+  <div class="container zwoelferspaltenlayout">
+    <div class="card-deck">
+    <div class="card" style="background-color: #ee6e2d;">
+
+      <h3 style="color: white"> {{ entry.text }} </h3>
+      <div id="copy" style="color: white"> {{ entry.zusatzfeld2 }}  </div>
+    </div>
+
+    <div class="card" style="background-color: #ee6e2d;">
+      <h3 style="color: white"> {{ entry.zusatzfeld1 }} </h3>
+      <div id="copy" style="color: white"> {{ entry.zusatzfeld3 }}  </div>
+    </div>
+  </div>
+
+</div>
 
 
 {% endblock %}
