--- a/templates/craft_sicherungWebsite/templates/ueberUns/index.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/index.html
@@ -19,30 +19,37 @@
   <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 
-  <div class="container Achter-Spaltenlayout">
-    <div id="text1" style="padding-bottom:80px; ">
+  <div class="container achterspaltenlayout">
       <h1 style="padding-bottom: 30px;"> Für ein gelingendes, selbstbestimmtes Leben in Einklang mit der Schöpfung  </h1>
       <p id="anleser"> Begleiten, bestärken, befähigen und bewahren – unser Ansatz zu einem selbstbestimmten und gelingendem Leben.
         Motiviert von der Liebe Gottes für Mensch und Natur.
       </p>
-      </div>
     </div>
   </div>
 
+  <div class="container zwoelferspaltenlayout">
+    <div class="card-deck">
+      <div class="row">
 
-<div class="container" style="max-width: 1160px;">
-  <div class="card-deck">
+  {% set entries = craft.entries.section('ueberUns').level(1).all() %}
+    {% set counter = 0 %}
 
-    {% for entry in craft.entries.section('uberUns') %}
-    <div class="col-md-6 col-lg-4">
-    <div class="card" style="  width: 360px; height: 436px; margin-bottom: 40px;">
-      <img class="card-img-top" src="{{ entry.bild.one().url }}" alt="Card image" height="240px">
-      <div class="card-body" style="padding-top: 0px;">
-        <p class="card-text">  <h3> {{  entry.title }} </h3>  {{ entry.body }}  </p>
+        {% for entry in entries %}  {% set counter = counter + 1 %}
+        <div class="col-md-4 col-sm-6" style="padding-bottom: 30px;">
+
+        <div class="card border-light h-100">
+          <div class="card-body">
+              <h3>{{ entry.title }}</h3>
+              <div id="copy"> {{ entry.text }} </div>
+          </div>
+        </div>
       </div>
-  </div>
-</div>
-    {% endfor %}
-  </div>
-</div>
+
+      {% if counter == 6 %}  <div class="col-4"> </div> {% endif %}
+
+        {% endfor %}
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
