passendes layout rausfinden

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -22,7 +22,7 @@
 
 
     <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" id="button" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+    <button class="navbar-toggler" id="hamburger" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
       <span class="navbar-toggler-icon" style="color:black;"></span>
     </button>
 
