--- a/templates/_layouts/navbarCSS.css
+++ b/templates/_layouts/navbarCSS.css
@@ -31,7 +31,6 @@
   .dropdown-menu>li {
     margin-top: 0px;
     margin-bottom: 0px;
-
   }
 
 /* Alle dropdownMenus, die ein nav-item als Vater haben, sollen beim hovern schon angezeigt werden */
@@ -60,3 +59,9 @@
   .dropdown-submenu:hover>.dropdown-menu {
       display: block;
   }
+
+  @media all and (max-width: 1100px)  {
+    .nav-item:hover>.dropdown-menu {
+        display: none;
+        }
+    }
