--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -2,18 +2,7 @@
 <!-- navbar-light links the colors with the background image -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-  <!-- d-sm-flex: creates a flexbox for small screens;
 
-  flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
-  die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
-
-  mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
-  fixed-width block level content—that is, content that has display: block and a width
-  set—by setting the horizontal margins to auto.
-
-  d-block: Use .d-block to simply set an element's display property to block-->
-
-  <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
     <!-- Chance Logo -->
     <a class="navbar-brand" id="logo"  href="http://localhost/craft/web/">
       <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
@@ -22,196 +11,41 @@
 
 
     <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" id="hamburger" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
-      <span class="navbar-toggler-icon" style="color:black;"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
 
     <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
+      </li>
 
-
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="http://localhost/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
-        </li>
-        <div class="dropdown">
-          <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled"
-            href="http://craft.dev/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
-
-            <ul class="dropdown-menu multi-level " role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="http://craft.dev/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="http://craft.dev/ueberUns/konzept.html"> Konzept</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Leitbild</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Motivation</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Der Verein</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Transparenz</a> </li>
-              <li class="dropdown-divider"></li>
-
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Empfehlungen</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Empfehlung</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Empfehlung</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Empfehlung</a></li>
-                </ul>
-              </li>
-            </li>
-          </ul>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
         </div>
-
-        <div class="dropdown">
-          <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
-
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Programme</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Dorfentwicklung</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Kinderpaten</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Umwelt- und Naturschutz</a></li>
-                </ul>
-              </li>
-              <li class="dropdown-item"> <a href="#"> Themen</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
-              </li>
-
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Projektberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
-              </li>
-            </li>
-          </ul>
-        </div>
-
-
-        <div class="dropdown">
-          <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
-
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Allgemein Spenden</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Einmalig</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Regelmäßig</a></li>
-                </ul>
-              </li>
-
-              <li class="dropdown-submenu" style="height: 100px;">
-               <a  class="dropdown-item" tabindex="-1" href="#">Programmbezogen Spenden</a>
-               <ul class="dropdown-menu">
-                 <li class="dropdown-submenu">
-                   <a class="dropdown-item" href="#">Einmalig</a>
-                   <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
-                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
-                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
-                   </ul>
-                   <a class="dropdown-item" href="#">Regelmäßig</a>
-                   <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
-                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
-                     <li class="dropdown-item"><a href="#">Kinderpate plus</a></li>
-                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
-                   </ul>
-                 </li>
-                 <li class="dropdown-item"><a href="#">Schenken und Spenden</a></li>
-                 <li class="dropdown-item"><a href="#">Einkaufen und Spenden</a></li>
-                 <li class="dropdown-item"><a href="#">Lastschrifttermine</a></li>
-
-               </ul>
-             </li>
-           </li>
-
-            </li>
-          </ul>
-        </div>
-
-
-        <div class="dropdown">
-          <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
-
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
-              <li class="dropdown-divider"></li>
-
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Freiwilligendienst</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Mit "weltwärts" nach Peru oder Kenia</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Weitere Einsatzmöglichkeiten in Peru</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Deine Bewerbung</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Erfahrungsberichte</a></li>
-                </ul>
-              </li>
-              <li class="dropdown-item"> <a href="#">Projektbesuch</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Für Sie daheim</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">"Consumer Missions"</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Kaffee - unsere tägliche Chance</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Bäume für Kenia statt Blumen für Euro</a></li>
-                </ul>
-              </li>
-
-              <li class="dropdown-item"> <a href="#">Presse und Downloads</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#">Literaturtipps</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#">Zitat</a> </li>
-
-            </li>
-          </ul>
-        </div>
-        <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/blog" style="color:black; font-weight: bold;"> BLOG </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
-        </li>
-
-      </ul>
-    </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
+
 </nav>
 
 <div class="container-fluid no-padding" style="  position:fixed; top:0; z-index: 900;">
