--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -1,28 +1,20 @@
 
+
 <!-- navbar-light links the colors with the background image -->
-<nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-  <!-- d-sm-flex: creates a flexbox for small screens;
+  <div class="container achterspaltenlayout">
 
-  flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
-  die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
-
-  mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
-  fixed-width block level content—that is, content that has display: block and a width
-  set—by setting the horizontal margins to auto.
-
-  d-block: Use .d-block to simply set an element's display property to block-->
-
-  <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
     <!-- Chance Logo -->
-
-    <a class="navbar-brand"  href="https://aufbau-website.de/craft/web/">
+    <a class="navbar-brand" id="logo" href="https://aufbau-website.de/craft/web/">
       <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
     </a>
 
+
+
     <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon" style="color:black;"></span>
+    <button class="navbar-toggler" id="hamburger" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
 
     <!-- Navbar links -->
@@ -32,10 +24,10 @@
           <a class="nav-link" href="https://aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
         </li>
         <div class="dropdown">
+
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled"
             href="https://aufbau-Website.de/craft/web/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
-
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
               <li class="dropdown-divider"></li>
@@ -210,8 +202,9 @@
       </ul>
     </div>
   </div>
+
 </nav>
 
-<div class="container-fluid no-padding" style="position:fixed; top:0; z-index: 900; padding-top: 0px;">
+<div class="container-fluid no-padding" style="position:fixed; top:0; z-index: 900;">
   <div class="rectangle" id="rechteck"></div>
 </div>
