--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -9,10 +9,10 @@
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
 
 
-  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999; padding-top: 100px;">
 
 
-  <div class="container achterspaltenlayout" style="padding-top: 0px;">
+  <div class="container achterspaltenlayout" style="padding-top: 100px;">
       <h1 style="padding-bottom: 30px;"> Themen, die uns bewegen  </h1>
       <p id="anleser"> Diese Themenbereiche sind für unsere Arbeit von besonderer Bedeutung. </p>
       </div>
