--- a/templates/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
@@ -1,10 +1,19 @@
 
+.navbar {
+  background-color: #f8f5f2;
+}
+
 /* Der graue Balken für die Navbar wird damit gestylt */
 .rectangle {
   height: 70px;
   background-color: #f8f5f2;
+  padding-top: 0px;
+  margin-top: -30px;
   }
 
+#hamburger {
+  margin-top: -60px;
+}
 
   #collapsibleNavbar {
     margin-top: -40px;
@@ -35,8 +44,7 @@
   }
 
 /* Alle dropdownMenus, die ein nav-item als Vater haben, sollen beim hovern schon angezeigt werden */
-.nav-item:hover>.dropdown-menu {
-    display: block;
+.nav-item>.dropdown-menu {
     margin-top: -5px;
     left: 50%;
     transform: translateX(-50%);
@@ -45,7 +53,8 @@
 
 /* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
  (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)
- Also alles Untermenus werden ausgewählt. */
+ Also alles Untermenus werden ausgewählt. Dann werden sie so verschoben,
+ dass sie rechts von dem Vatermenü sind */
   .dropdown-submenu>.dropdown-menu {
       top: 0;
       left: 100%;
@@ -60,3 +69,12 @@
   .dropdown-submenu:hover>.dropdown-menu {
       display: block;
   }
+
+  @media all and (max-width: 992px)  {
+    .nav-item:hover>.dropdown-menu {
+      left: inital;
+      transform: translateX(0%);
+      margin-top: 0px;
+
+        }
+    }
