--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -3,11 +3,11 @@
 <!-- navbar-light links the colors with the background image -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding: 0px;">
 
     <!-- Chance Logo -->
     <a class="navbar-brand" id="logo" href="https://aufbau-website.de/craft/web/">
-      <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
+      <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="80" height="60">
     </a>
 
 
@@ -25,8 +25,8 @@
         </li>
         <div class="dropdown">
 
-          <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled"
+          <li class="nav-item dropdown" >
+            <a class="nav-link" data-toggle="dropdown"
             href="https://aufbau-Website.de/craft/web/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
@@ -58,7 +58,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -105,7 +105,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -151,7 +151,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
