--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -110,11 +110,11 @@
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Allgemein Spenden</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Einmalig</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmaligallgemein.html">Einmalig</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Regelmäßig</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/regelmaesigallgemein.html">Regelmäßig</a></li>
                 </ul>
               </li>
 
