--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
@@ -113,16 +113,16 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" style="color:white; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Allgemein Spenden</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Einmalig</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmaligallgemein.html">Einmalig</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Regelmäßig</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/regelmaesigallgemein.html">Regelmäßig</a></li>
                 </ul>
               </li>
 
